--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <body>
+    <div id="loader-wrapper">
+        <div class="loader-content">
+            <i class="fas fa-satellite-dish loader-icon"></i>
+            <h1 class="loader-text">MovieVerse: Carregando Dados Estelares...</h1>
+            <div class="loader-bar"></div>
+        </div>
+    </div>
+        <header class="header">
+
     <header class="header">
         <div class="logo">
             <span class="logo-text"><i class="fas fa-satellite-dish"></i> MovieVerse</span>
