--- a/movie-details.html
+++ b/movie-details.html
@@ -89,7 +89,7 @@
             <a href="index.html">Início</a>
             <a href="index2.html">Em Breve</a>
         </nav>
-        <form class="search-container" action="index3.html" method="GET">
+        <form class="search-container" action="movie-details.html" method="GET">
             <input type="text" placeholder="Buscar filmes..." class="search-input" name="q">
             <button type="submit" class="search-submit-button" aria-label="Buscar">
                 <i class="fas fa-search search-icon"></i>
