--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <body>
     <div id="loader-wrapper">
         <div class="loader-content">
             <i class="fas fa-satellite-dish loader-icon"></i>
@@ -18,7 +16,6 @@
             <div class="loader-bar"></div>
         </div>
     </div>
-        <header class="header">
 
     <header class="header">
         <div class="logo">
@@ -29,7 +26,7 @@
             <a href="index2.html">Em Breve</a>
         </nav>
         
-        <form class="search-container" action="index3.html" method="GET">
+        <form class="search-container" action="movie-details.html" method="GET">
             <input type="text" id="search-input" name="q" placeholder="Buscar filmes..." class="search-input" required>
             <button type="submit" class="search-submit-button" aria-label="Buscar">
                 <i class="fas fa-search search-icon"></i>
